<resources>
    <string name="app_name">Pokémon EV Tracker</string>
    <string name="hp">HP</string>
    <string name="zero">0</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="special_attack">Special Attack</string>
    <string name="special_defense">Special Defense</string>
    <string name="speed">Speed</string>
    <string name="track_defeated_pokemon">Track Defeated Pokémon</string>
    <string name="reset">Reset</string>
    <string name="search_pokemon">Search Pokemon</string>
    <string name="evs">EVs:</string>
    <string name="stats">Stats:</string>
</resources>